# chat-harness

./: .gitignore  .ralphrc  CLAUDE.md  README.md  config.yaml  mcp.json  mcp.json.example  pyproject.toml
.ralph/: .loop_start_sha  PROMPT.md  fix_plan.md  progress.json  queue.json
.ralph/specs/: issue-2.md  issue-3.md  issue-4.md  issue-5.md  issue-6.md  issue-7.md  issue-8.md  issue-9.md
chat_harness/: __init__.py  __main__.py  agent.py  config.py  llm.py  mcp_client.py  repl.py
docs/: v0.md
docs/agents/: domain.md  issue-tracker.md
install/: windows-launcher.bat  windows-terminal-profile.json  wsl-setup.sh
tests/: test_agent.py  test_config.py  test_llm.py  test_mcp_roundtrip.py  test_repl.py
