[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chat-harness"
version = "0.1.0"
description = "Local Qwen+MCP vault assistant"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.scripts]
chat-harness = "chat_harness.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["chat_harness"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "respx>=0.21.0",
]
